[package]
name = "qliveplayer_lib"
version = "0.1.0"
authors = ["IsoaSFlus <me@isoasflus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
tokio-tungstenite = "*"
reqwest = { version = "*", features = ["json"] }
serde_json = "*"
serde = { version = "1", features = ["derive"] }
rand = "*"
regex = "*"
uuid = { version = "0.8", features = ["v4"] }
chrono = "*"
