[package]
name = "qliveplayer_lib"
version = "0.4.0"
authors = ["IsoaSFlus <me@isoasflus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
# tokio-rustls = "0.22"
# webpki-roots = "*"
# tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
tokio-tungstenite = { version = "*", features = ["native-tls-vendored"] }
reqwest = { version = "*", default-features = false, features = ["gzip", "json", "native-tls-vendored"] }
log = "*"
env_logger = "*"
httparse = "*"
serde_json = "*"
serde = { version = "1", features = ["derive"] }
bincode = "*"
rand = "*"
flate2  = { version = "*", features = [] }
regex = "*"
fancy-regex = "*"
uuid = { version = "0.8", features = ["v4"] }
chrono = "*"
url = "*"
urlencoding = "*"
base64 = "*"
libc = "*"
html-escape = "*"
futures = "0.3"
tars-stream = { path = "tars-stream"}

# [lib]
# name = "rust"
# crate-type = ["staticlib"]
